--- a/Iot/src/V1/resources/device_manager_client_config.json
+++ b/Iot/src/V1/resources/device_manager_client_config.json
@@ -113,6 +113,11 @@
           "timeout_millis": 60000,
           "retry_codes_name": "non_idempotent",
           "retry_params_name": "default"
+        },
+        "SendCommandToDevice": {
+          "timeout_millis": 60000,
+          "retry_codes_name": "non_idempotent",
+          "retry_params_name": "default"
         }
       }
     }
